[tool.poetry]
name = "datamodelutils"
version = "1.1.0"
description = "Gen3 Data Model Utils"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uc-cdis/datamodelutils"
packages = [
    { include = "./datamodelutils" }
]


[tool.poetry.dependencies]
python = ">=3.9,<4"
# temporarily use branch names until these branches are merged and deployed to PyPI.
dictionaryutils = {git = "https://github.com/uc-cdis/dictionaryutils", branch = "chore/update-jsonschema"}
gen3datamodel = {git = "https://github.com/uc-cdis/gen3datamodel.git", branch = "chore/update-jsonschema"}
psqlgraph = "*"
sqlalchemy = "^1.3.0, <1.4"

[tool.poetry.dev-dependencies]
pytest = ">=7,<8"
mock = "*"
pytest-cov = "*"
coverage = "*"

[tool.poetry.scripts]
datamodel_postgres_admin = 'datamodelutils.postgres_admin:main'
datamodel_repl = 'datamodelutils.repl:main'

[build-system]
requires = ["poetry>=1.1.15"]
build-backend = "poetry.masonry.api"
